--- a/PythonForDS.ipynb
+++ b/PythonForDS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 1,
    "id": "2292440d",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4   67088.0  "
       ]
      },
-     "execution_count": 204,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "id": "771f83ea",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "4   Video Games     936.0"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "id": "74d6227c",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "5  2019     West   49475.0"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "id": "3746ccae",
    "metadata": {},
    "outputs": [
@@ -376,22 +376,23 @@
        "4 2018-03-15       2644"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#3. Create new column 'days_diff' with number of days difference between reference date passed and each order date\n",
+    "#3. Create new column 'days_diff' with number of days difference between reference date passed and each order dat\n",
     "\n",
     "reference_date = dt.datetime.today()\n",
+    "reference_date\n",
     "sales_data[\"days_diff\"]=(reference_date-sales_data[\"OrderDate\"]).dt.days\n",
     "sales_data[[\"OrderDate\",\"days_diff\"]].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 5,
    "id": "99e52986",
    "metadata": {},
    "outputs": [
@@ -453,7 +454,7 @@
        "3  Timothy            [David, Stephen]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 6,
    "id": "154a8c2d",
    "metadata": {},
    "outputs": [
@@ -527,7 +528,7 @@
        "2     West               2     154899.0"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 7,
    "id": "ec18f6fd",
    "metadata": {},
    "outputs": [
@@ -613,7 +614,7 @@
        "3  Timothy      17.540193"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 8,
    "id": "5a36ef66",
    "metadata": {},
    "outputs": [
@@ -842,7 +843,7 @@
        "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 9,
    "id": "c406b314",
    "metadata": {},
    "outputs": [
@@ -865,7 +866,7 @@
        "8.7"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 10,
    "id": "0c86955d",
    "metadata": {},
    "outputs": [
@@ -893,6 +894,7 @@
    "source": [
     "#8. Return titles of movies with shortest and longest run time \n",
     "\n",
+    "imdb_data.iloc[4][\"imdbRating\"]\n",
     "\n",
     "shortest_movie=imdb_data.loc[imdb_data[\"duration\"].idxmin(),\"title\"]\n",
     "longest_movie=imdb_data.loc[imdb_data[\"duration\"].idxmax(),\"title\"]\n",
@@ -903,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 11,
    "id": "6b21f536",
    "metadata": {},
    "outputs": [
@@ -1273,7 +1275,7 @@
        "[10 rows x 44 columns]"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 12,
    "id": "335a02ae",
    "metadata": {},
    "outputs": [
@@ -1688,7 +1690,7 @@
        "[11952 rows x 44 columns]"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 13,
    "id": "4f082c90",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1907,7 @@
        "[53943 rows x 10 columns]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 14,
    "id": "ff4bd16d",
    "metadata": {},
    "outputs": [
@@ -1938,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 15,
    "id": "1a17077a",
    "metadata": {},
    "outputs": [
@@ -2141,7 +2143,7 @@
        "[53941 rows x 10 columns]"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2155,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 16,
    "id": "f411f613",
    "metadata": {},
    "outputs": [
@@ -2310,7 +2312,7 @@
        "[53943 rows x 6 columns]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2324,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "53b219a6",
    "metadata": {},
    "outputs": [
@@ -2410,7 +2412,7 @@
        "4  4.34  4.35  2.75   63.3  51.91725"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2425,23 +2427,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 18,
    "id": "bd85b6a6",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\KIIT\\AppData\\Local\\Temp\\ipykernel_26756\\2801236567.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  diamond_data[\"price\"].fillna(mean, inplace=True)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -2666,7 +2655,7 @@
        "[53943 rows x 11 columns]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2675,7 +2664,7 @@
     "#15. Impute missing price values with mean.\n",
     "\n",
     "mean = diamond_data[\"price\"].mean()\n",
-    "diamond_data[\"price\"].fillna(mean, inplace=True)\n",
+    "diamond_data[\"price\"] = diamond_data[\"price\"].fillna(mean)\n",
     "diamond_data"
    ]
   }
